--- a/scss/3.layout/_header.scss
+++ b/scss/3.layout/_header.scss
@@ -36,6 +36,21 @@
         }
     }
 
+    button {
+        padding: 0;
+        border-width: 0;
+    }
+
+    #search1 button {
+        position: absolute;
+        font-size: 20px;
+        top: 10px;
+        right: 0;
+        width: 44px;
+        height: 44px;
+        background-color: transparent;
+    }
+    
     .search {
         position: relative;
         input.wide {
@@ -43,12 +58,6 @@
             padding-top: 10px;
             padding-bottom: 10px;
             background: #E5E5E5;
-        }
-        .wide-btn {
-            font-size: 20px;
-            position: absolute;
-            top: 13px;
-            right: 10px;
         }
     }
 
